crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__field_access_2.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 252
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Foo {\n    int foo;\n}\n\nvoid bar() {\n    Foo foo;\n    foo.foo = 1;\n         |\n         ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 6,
        "character": 8
      },
      "end": {
        "line": 6,
        "character": 11
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 12
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 8
      },
      "end": {
        "line": 1,
        "character": 11
      }
    }
  }
]
