crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_parameter_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 162
expression: "goto_definition(r#\"\n%! main.sp\nint foo;\n\nvoid bar(int foo) {\n              |\n              ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 2,
        "character": 13
      },
      "end": {
        "line": 2,
        "character": 16
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 9
      },
      "end": {
        "line": 2,
        "character": 16
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 13
      },
      "end": {
        "line": 2,
        "character": 16
      }
    }
  }
]
