crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__global_variable_1.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 7
expression: "goto_definition(r#\"\n%! main.sp\nint foo;\n     |\n     ^\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    }
  }
]
